--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
          <p>I'am Pranjay Poddar , Second Year CSE-CC UnderGrad Student In SRMIST, KTR-Chennai
          <br>
          <br>
-         I am a Web developer, Graphic Designer , UI/UX developer , Data Science enthusiast, AI enthusiast and Cloud Computing enthusiast. I loves to work on projects belonging to web development Domain by using a wide-range of resources available on various data-sharing platforms.
+         I am a Web developer, Graphic Designer , UI/UX developer , Data Science enthusiast, AI enthusiast and Cloud Computing enthusiast. I love to work on projects belonging to web development Domain by using a wide-range of resources available on various data-sharing platforms.
          <br><br>
          I cherrish Github to Collab with people showing same love and interest in various Domains   
          of the following Modules :</p>
