--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   gtag('config', 'UA-171690017-1');
 </script>
 
-
+    <link rel="shortcut icon" type="image/x-icon" href="me1.jpg" />
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,500;1,600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
