--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ var currentScrollPos = window.pageYOffset;
 
         <div class="section-title">
             <h2>Projects</h2>
-            <p>I have completed some projects whic are accessible through my github account:</p><br> 
+            <p>I have completed some projects which are accessible through my github account:</p><br> 
         </div>
 
         <div class="row">
