--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171690017-1"></script>
 <script>
+	
+	
+  document.addEventListener("contextmenu", function(e){
+    e.preventDefault();
+}, false);
+	
+	
+
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
