--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ drift.load('izskvvhsx7wr');
             <div class="col-lg-6" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
                 <h3 class='experience-title'>Technical Experience</h3>
                 <div class="experience-item">
-                    <h4>Web Developer</h4>
+                    <h4>Technical Committee Member</h4>
                     <h5>Feb,2021-Present</h5>
                     <p><i class="fas fa-caret-right"></i>Salesforce SRM</p>
                     <p>I Have been working with Salesforce SRM under Technical domain. </p>
@@ -379,32 +379,164 @@ drift.load('izskvvhsx7wr');
         </div>
     </div>
 </div>
-</section>
-<!--End Of Experience Section-->
-<!--Projects Section-->
 <section id="projects" class="projects">
     <div class="container">
-        <div class="section-title">
+    <div class="section-title">
             <h2>Projects</h2>
-            <p>I have completed some projects which are accessible through my github account:</p><br> 
         </div>
         <div class="row">
             <div class="col-lg-12 d-flex justify-content-center">
                 <ul id="portfolio-filters">
                     <li data-filter="*" class="filter-active">All</li>
-                    <li data-filter=".filter-ML">WEB</li>
-                    <li data-filter=".filter-DL">GRAPHIC</li>
-                    <li data-filter=".filter-NLP">VIDEO </li>
-                    <li data-filter=".filter-EDA">C</li>
-                    <li data-filter=".filter-web">PYTHON</li>
+                    <li data-filter=".filter-ML">Web</li>
+                    <li data-filter=".filter-DL">Angular</li>
+                    <li data-filter=".filter-NLP">C/C++</li>
+                    <li data-filter=".filter-EDA">Python</li>
+                    <li data-filter=".filter-web">Javascript</li>
                 </ul>
             </div>
         </div>
-<div class="row portfolio-container" text-align:center>
-      <div class="col-lg-12 col-md-6 portfolio-item filter-web">
-       <a href="https://pranjay-poddar.github.io/catalytic_originals/" ><img src="cato.png" class="img-fl4d" alt="Catalytic Originals"></a>            
+        <div class="row portfolio-container">
+        <!-- python projects eda  -->
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-EDA">
+                <div class="portfolio-wrap">
+                    <img src="img/Pf/ipl.jpg" class="img-fluid" alt="">
+                    <div class="portfolio-info">
+                        <h4></h4>
+                        <p></p>
+                        <div class="portfolio-links">
+                            <a href="img/Pf/ipl.jpg" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="https://github.com/harshgeek4coder/IPL-Cricket-Match-Exploratory-Data-Analysis---EDA" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+          <!-- web projects  ml -->
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
+                <div class="portfolio-wrap">
+                    <img src="projects images/cato.png" class="img-fluid" alt="catalytic originals image">
+                    <div class="portfolio-info">
+                        <h4>Catalytic Originals Website</h4>
+                        <p></p>
+                        <div class="portfolio-links">
+                            <a href="projects images/cato.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="https://pranjay-poddar.github.io/catalytic_originals/" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
             </div>
-</div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
+                <div class="portfolio-wrap">
+                    <img src="projects images/google.png" class="img-fluid" alt="catalytic originals image">
+                    <div class="portfolio-info">
+                        <h4>Google Clone Website</h4>
+                        <p></p>
+                        <div class="portfolio-links">
+                            <a href="projects images/google.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="https://pranjay-poddar.github.io/search/" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
+                <div class="portfolio-wrap">
+                    <img src="projects images/Preksha.png" class="img-fluid" alt="catalytic originals image">
+                    <div class="portfolio-info">
+                        <h4>Preksha Website</h4>
+                        <p>In Web Hackathon</p>
+                        <div class="portfolio-links">
+                            <a href="projects images/Preksha.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="https://github.com/pranjay-poddar/Preksha" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
+                <div class="portfolio-wrap">
+                    <img src="projects images/Portfolio pranjay.png" class="img-fluid" alt="catalytic originals image">
+                    <div class="portfolio-info">
+                        <h4>Portfolio Website</h4>
+                        <p>Pranjay Poddar</p>
+                        <div class="portfolio-links">
+                            <a href="projects images/Portfolio pranjay.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="https://pranjay-poddar.github.io/portfolio/index.html" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
+                <div class="portfolio-wrap">
+                    <img src="projects images/artdreamation.png" class="img-fluid" alt="catalytic originals image">
+                    <div class="portfolio-info">
+                        <h4>Artdreamation Ecommerce Website</h4>
+                        <p></p>
+                        <div class="portfolio-links">
+                            <a href="projects images/artdreamation.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="https://pranjay-poddar.github.io/artdreamation/" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
+                <div class="portfolio-wrap">
+                    <img src="projects images/Portfolio anurag.png" class="img-fluid" alt="catalytic originals image">
+                    <div class="portfolio-info">
+                        <h4>Portfolio Website</h4>
+                        <p>Anurag Bajoria</p>
+                        <div class="portfolio-links">
+                            <a href="projects images/Portfolio anurag.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="https://pranjay-poddar.github.io/anurag_bajoria/" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+              <!-- c/c++ projects  -->
+            <div class="col-lg-4 col-md-6 portfolio-item filter-NLP">
+                <div class="portfolio-wrap">
+                    <img src="projects images/rube goldberg.png" class="img-fluid" alt="">
+                    <div class="portfolio-info">
+                        <h4>Virtual Rube Goldberg Machine</h4>
+                        <p> </p>
+                        <div class="portfolio-links">
+                            <a href="projects images/rube goldberg.png" data-gall="portfolioGallery" class="venobox"><i class="fas fa-plus"></i></a>
+                            <a href="https://github.com/pranjay-poddar/dsa_asg4" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- angular projects dl  -->
+            <div class="col-lg-4 col-md-6 portfolio-item filter-DL">
+                <div class="portfolio-wrap">
+                    <img src="projects images/iwsc.png" class="img-fluid" alt="">
+                    <div class="portfolio-info">
+                        <h4>IWSC Student Chapter Portal</h4>
+                        <p> </p>
+                        <div class="portfolio-links">
+                            <a href="projects images/iwsc.png" data-gall="portfolioGallery" class="venobox"><i class="fas fa-plus"></i></a>
+                            <a href="https://github.com/pranjay-poddar/IWSC-Student-Chapter-Portal" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- python projects  -->
+            <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+                <div class="portfolio-wrap">
+                    <img src="img/Pf/personal-portfolio-website-500x500.jpg" class="img-fluid" alt="">
+                    <div class="portfolio-info">
+                        <h4>Simple Portfolio Based Website </h4>
+                        <p>Using HTML,CSS ,Javascript , I have designed a simple portfolio website .I have used some javascript based animations , like
+                            WOW Animation JS And Particle Animation. </p>
+                        <div class="portfolio-links">
+                            <a href="img/Pf/personal-portfolio-website-500x500.jpg" data-gall="portfolioGallery" class="venobox"><i class="fas fa-plus"></i></a>
+                            <a href="https://github.com/harshgeek4coder/Simple-Portfolio-Website" target="_blank"><i class="fas fa-link"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div> -->
+   </div>
+ </div>
+</section>
 <!--End Of Projects Section-->
 <!--Contacts Section-->
 <section class="contact" id="contact">
