changes project images res

--- a/index.html
+++ b/index.html
@@ -453,12 +453,12 @@ drift.load('izskvvhsx7wr');
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
                 <div class="portfolio-wrap">
-                    <img src="projects images/Portfolio pranjay.png" class="img-fluid" alt="catalytic originals image">
+                    <img src="projects images/PORTFOLIO PRANJAY.png" class="img-fluid" alt="catalytic originals image">
                     <div class="portfolio-info">
                         <h4>Portfolio Website</h4>
                         <p>Pranjay Poddar</p>
                         <div class="portfolio-links">
-                            <a href="projects images/Portfolio pranjay.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/PORTFOLIO PRANJAY.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
                             <a href="https://pranjay-poddar.github.io/portfolio/index.html" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -479,12 +479,12 @@ drift.load('izskvvhsx7wr');
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
                 <div class="portfolio-wrap">
-                    <img src="projects images/Portfolio anurag.png" class="img-fluid" alt="catalytic originals image">
+                    <img src="projects images/PORTFOLIO ANURAG.png" class="img-fluid" alt="catalytic originals image">
                     <div class="portfolio-info">
                         <h4>Portfolio Website</h4>
                         <p>Anurag Bajoria</p>
                         <div class="portfolio-links">
-                            <a href="projects images/Portfolio anurag.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/PORTFOLIO ANURAG.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
                             <a href="https://pranjay-poddar.github.io/anurag_bajoria/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -493,12 +493,12 @@ drift.load('izskvvhsx7wr');
               <!-- c/c++ projects  -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-NLP">
                 <div class="portfolio-wrap">
-                    <img src="projects images/rube goldberg.png" class="img-fluid" alt="">
+                    <img src="projects images/rube.png" class="img-fluid" alt="">
                     <div class="portfolio-info">
                         <h4>Virtual Rube Goldberg Machine</h4>
                         <p> </p>
                         <div class="portfolio-links">
-                            <a href="projects images/rube goldberg.png" data-gall="portfolioGallery" class="venobox"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/rube.png" data-gall="portfolioGallery" class="venobox"><i class="fas fa-plus"></i></a>
                             <a href="https://github.com/pranjay-poddar/dsa_asg4" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
