--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@ drift.load('izskvvhsx7wr');
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
                 <div class="portfolio-wrap">
-                    <img src="projects images/google.png" class="img-fluid" alt="catalytic originals image">
+                    <img src="projects images/google.png" class="img-fluid" alt=" google image">
                     <div class="portfolio-info">
                         <h4>Google Clone Website</h4>
                         <p></p>
@@ -440,7 +440,7 @@ drift.load('izskvvhsx7wr');
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
                 <div class="portfolio-wrap">
-                    <img src="projects images/Preksha.png" class="img-fluid" alt="catalytic originals image">
+                    <img src="projects images/Preksha.png" class="img-fluid" alt="Preksha logo image">
                     <div class="portfolio-info">
                         <h4>Preksha Website</h4>
                         <p>In Web Hackathon</p>
@@ -453,7 +453,7 @@ drift.load('izskvvhsx7wr');
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
                 <div class="portfolio-wrap">
-                    <img src="projects images/PORTFOLIO PRANJAY.png" class="img-fluid" alt="catalytic originals image">
+                    <img src="projects images/PORTFOLIO PRANJAY.png" class="img-fluid" alt="Portfolio Pranjay image">
                     <div class="portfolio-info">
                         <h4>Portfolio Website</h4>
                         <p>Pranjay Poddar</p>
@@ -466,7 +466,7 @@ drift.load('izskvvhsx7wr');
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
                 <div class="portfolio-wrap">
-                    <img src="projects images/artdreamation.png" class="img-fluid" alt="catalytic originals image">
+                    <img src="projects images/artdreamation.png" class="img-fluid" alt="Artdreamation image">
                     <div class="portfolio-info">
                         <h4>Artdreamation Ecommerce Website</h4>
                         <p></p>
@@ -479,7 +479,7 @@ drift.load('izskvvhsx7wr');
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
                 <div class="portfolio-wrap">
-                    <img src="projects images/PORTFOLIO ANURAG.png" class="img-fluid" alt="catalytic originals image">
+                    <img src="projects images/PORTFOLIO ANURAG.png" class="img-fluid" alt="Portfolio Anurag image">
                     <div class="portfolio-info">
                         <h4>Portfolio Website</h4>
                         <p>Anurag Bajoria</p>
@@ -493,7 +493,7 @@ drift.load('izskvvhsx7wr');
               <!-- c/c++ projects  -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-NLP">
                 <div class="portfolio-wrap">
-                    <img src="projects images/rube.png" class="img-fluid" alt="">
+                    <img src="projects images/rube.png" class="img-fluid" alt="Rube goldberg machine image">
                     <div class="portfolio-info">
                         <h4>Virtual Rube Goldberg Machine</h4>
                         <p> </p>
@@ -507,7 +507,7 @@ drift.load('izskvvhsx7wr');
             <!-- angular projects dl  -->
             <div class="col-lg-4 col-md-6 portfolio-item filter-DL">
                 <div class="portfolio-wrap">
-                    <img src="projects images/iwsc.png" class="img-fluid" alt="">
+                    <img src="projects images/iwsc.png" class="img-fluid" alt="iwsc logo">
                     <div class="portfolio-info">
                         <h4>IWSC Student Chapter Portal</h4>
                         <p> </p>
