--- a/index.html
+++ b/index.html
@@ -453,12 +453,12 @@ drift.load('izskvvhsx7wr');
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
                 <div class="portfolio-wrap">
-                    <img src="projects images/PORTFOLIO PRANJAY.png" class="img-fluid" alt="Portfolio Pranjay image">
+                    <img src="projects images/pranjay.png" class="img-fluid" alt="Portfolio Pranjay image">
                     <div class="portfolio-info">
                         <h4>Portfolio Website</h4>
                         <p>Pranjay Poddar</p>
                         <div class="portfolio-links">
-                            <a href="projects images/PORTFOLIO PRANJAY.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/pranjay.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
                             <a href="https://pranjay-poddar.github.io/portfolio/index.html" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -479,12 +479,12 @@ drift.load('izskvvhsx7wr');
             </div>
             <div class="col-lg-4 col-md-6 portfolio-item filter-ML">
                 <div class="portfolio-wrap">
-                    <img src="projects images/PORTFOLIO ANURAG.png" class="img-fluid" alt="Portfolio Anurag image">
+                    <img src="projects images/anurag.png" class="img-fluid" alt="Portfolio Anurag image">
                     <div class="portfolio-info">
                         <h4>Portfolio Website</h4>
                         <p>Anurag Bajoria</p>
                         <div class="portfolio-links">
-                            <a href="projects images/PORTFOLIO ANURAG.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/anurag.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
                             <a href="https://pranjay-poddar.github.io/anurag_bajoria/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
