added title in vbox

--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@ drift.load('izskvvhsx7wr');
             <img id="pic" src="img/me1.jpg" class="mx-auto d-block" alt="Responsive image">
         </div>           
 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
-         <h3>My Profile </h3>
-         <p>I'am Pranjay Poddar , Second Year CSE-CC UnderGrad Student In SRMIST, KTR-Chennai
+         <h3>Profile </h3>
+         <p>I'am Pranjay Poddar , A second year CSE-CC UnderGrad Student In SRMIST, KTR-Chennai
          <br>
          <br>
          I am a Web developer, Graphic Designer , UI/UX developer , Data Science enthusiast, AI enthusiast and Cloud Computing enthusiast. I love to work on projects belonging to web development Domain by using a wide-range of resources available on various data-sharing platforms.
          <br><br>
-         I cherrish Github to Collab with people showing same love and interest in various Domains   
+         I cherrish collaborations on Github with people having interest in various Domains   
          of the following Modules :</p>
          <div class="row" id="list">
             <div class="col-lg-6">
@@ -154,7 +154,7 @@ drift.load('izskvvhsx7wr');
             <div class="col-lg-6">
                 <ul>
                     <li> Competitive Coding</li>
-                    <li> Neural Networks</li>
+                    <li> Data Structures</li>
                     <li> Algorithms</li>
                    
                     <br>
@@ -167,7 +167,7 @@ drift.load('izskvvhsx7wr');
 </div>
 <!--Education starts-->
 <div class="education container">
-    <h3 class="education-title">My Education</h3>
+    <h3 class="education-title">Education</h3>
     <div class="row" data-aos="fade-right" data-aos-duration="1200" data-aos-easing="ease-in-out">
         <div class="col-lg-6" >
             <div class="education-item pb-0" >
@@ -307,7 +307,7 @@ drift.load('izskvvhsx7wr');
     <div class="container">
         <div class="section-title">
             <h2>Experience</h2>
-            <p>I have worked in various tech and non-tech clubs and team of SRM Institute Of Science And Technology KTR Chennai.
+            <p>Worked in various tech and non-tech clubs and team of SRM Institute Of Science And Technology KTR Chennai.
             </p>
         </div>
         <div class="row">
@@ -317,37 +317,37 @@ drift.load('izskvvhsx7wr');
                     <h4>Technical Committee Member</h4>
                     <h5>Feb,2021-Present</h5>
                     <p><i class="fas fa-caret-right"></i>Salesforce SRM</p>
-                    <p>I Have been working with Salesforce SRM under Technical domain. </p>
+                    <p>Working with Salesforce SRM under Technical domain. </p>
                 </div>
                 <div class="experience-item">
                     <h4>Web Developer</h4>
                     <h5>Oct,2020-Present</h5>
                     <p><i class="fas fa-caret-right"></i>Inception Wave Student Chapter SRM</p>
-                    <p>I Have been working with IWSC SRM as a front-ended web developer. </p>
+                    <p>Working with IWSC SRM as a front-end web developer. </p>
                 </div>
                 <div class="experience-item">
                     <h4>Web Developer and Graphic Designer</h4>
                     <h5>Feb,2020-Present</h5>
                     <p><i class="fas fa-caret-right"></i>WEBARCH CLUB SRM</p>
-                    <p>I Have been working with Webarch Club as a graphic designer and competitive coder. </p>
+                    <p>Working with Webarch Club as a graphic designer and competitive coder. </p>
                 </div>
                 <div class="experience-item">
                     <h4>Web Developer</h4>
-                    <h5>July,2020-september</h5>
+                    <h5>July,2020-September,2020</h5>
                     <p><i class="fas fa-caret-right"></i>DATA SCIENCE COMMUNITY SRM</p>
-                    <p>I have been working with Data Science Community as a Web Develpoer.</p>
+                    <p>Worked with Data Science Community as a Web Develpoer.</p>
                 </div>
                 <div class="experience-item">
                     <h4>Rocket Propulsion Team Member</h4>
-                    <h5>July,2019-feb,2020</h5>
+                    <h5>July,2019-Feb,2020</h5>
                     <p><i class="fas fa-caret-right"></i> TEAM SRMSAT</p>
-                    <p>I have worked in SRM Space Systems Laboratory as a Rocket Propulsion team member of Team SRMSAT.</p>
+                    <p>Worked in SRM Space Systems Laboratory as a Rocket Propulsion team member of Team SRMSAT.</p>
                 </div>
                 <div class="experience-item">
                     <h4>Graphic Designer</h4>
-                    <h5>July,2019-feb,2020</h5>
+                    <h5>July,2019-Feb,2020</h5>
                     <p><i class="fas fa-caret-right"></i> IVENTOR'S</p>
-                    <p>I have worked in Iventor's as a graphic designer and video editing intern.</p>
+                    <p>Worked in Iventor's as a graphic designer and video editing intern.</p>
                 </div>
             </div>
                 <div class="col-lg-6" data-aos="fade-left" data-aos-duration="1200" data-aos-easing="ease-in-out">
@@ -356,25 +356,25 @@ drift.load('izskvvhsx7wr');
                         <h4>Committee Member</h4>
                         <h5>September,2019-Present</h5>
                         <p><i class="fas fa-caret-right"></i>AARUUSH-Tech Festival</p>
-                        <p>I Have been a member of an organising committee and workshop committee in Aaruush, A National Level Techno Management Fest.</p>
+                        <p>Member of an organising committee and workshop committee in Aaruush, A National Level Techno Management Fest.</p>
                     </div>
                 <div class="experience-item">
                         <h4>Committee Member</h4>
-                        <h5>July,2019,-Present</h5>
+                        <h5>July,2019-Present</h5>
                         <p><i class="fas fa-caret-right"></i>Rotaract Club SRM</p>
-                        <p>I Have been an active member of an organising committee of Rotaract Club SRM.</p>
+                        <p>An active member of an organising committee of Rotaract Club SRM.</p>
                     </div>
                 <div class="experience-item">
                         <h4>Volunteer</h4>
                         <h5>September,2019-Januray,2020</h5>
                         <p><i class="fas fa-caret-right"></i>AARUUSH-Tech Festival</p>
-                        <p>I Have been an active member in volunteering for an organising discipline committee in Aaruush, A National Level Techno Management Fest. </p>
+                        <p>An active member in volunteering for an organising discipline committee in Aaruush, A National Level Techno Management Fest. </p>
                     </div>
                <div class="experience-item">
                         <h4>Volunteer</h4>
                         <h5>Januray,2020-March,2020</h5>
                         <p><i class="fas fa-caret-right"></i>MILAN-Cultural Festival</p>
-                        <p>I Have been an active member in volunteering for a Informals committee, to ensure proper functioning of discipline in events in MILAN , cultural festival of our College</p>
+                        <p>An active member in volunteering for a Informals committee, to ensure proper functioning of discipline in events in MILAN , cultural festival of our College</p>
                     </div>
         </div>
     </div>
@@ -419,7 +419,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Catalytic Originals Website</h4>
                         <p></p>
                         <div class="portfolio-links">
-                            <a href="projects images/cato.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/cato.png" data-gall="portfolioGallery" class="venobox" title="Catalytic Originals Website"><i class="fas fa-plus"></i></a>
                             <a href="https://pranjay-poddar.github.io/catalytic_originals/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -432,7 +432,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Google Clone Website</h4>
                         <p></p>
                         <div class="portfolio-links">
-                            <a href="projects images/google.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/google.png" data-gall="portfolioGallery" class="venobox" title="Google Clone Website"><i class="fas fa-plus"></i></a>
                             <a href="https://pranjay-poddar.github.io/search/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -445,7 +445,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Preksha Website</h4>
                         <p>In Web Hackathon</p>
                         <div class="portfolio-links">
-                            <a href="projects images/Preksha.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/Preksha.png" data-gall="portfolioGallery" class="venobox" title="Preksha Website"><i class="fas fa-plus"></i></a>
                             <a href="https://github.com/pranjay-poddar/Preksha" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -458,7 +458,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Portfolio Website</h4>
                         <p>Pranjay Poddar</p>
                         <div class="portfolio-links">
-                            <a href="projects images/pranjay.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/pranjay.png" data-gall="portfolioGallery" class="venobox" title="Portfolio Website"><i class="fas fa-plus"></i></a>
                             <a href="https://pranjay-poddar.github.io/portfolio/index.html" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -471,7 +471,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Artdreamation Ecommerce Website</h4>
                         <p></p>
                         <div class="portfolio-links">
-                            <a href="projects images/artdreamation.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/artdreamation.png" data-gall="portfolioGallery" class="venobox" title="Artdreamation Ecommerce Website"><i class="fas fa-plus"></i></a>
                             <a href="https://pranjay-poddar.github.io/artdreamation/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -484,7 +484,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Portfolio Website</h4>
                         <p>Anurag Bajoria</p>
                         <div class="portfolio-links">
-                            <a href="projects images/anurag.png" data-gall="portfolioGallery" class="venobox" title="EDA 1"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/anurag.png" data-gall="portfolioGallery" class="venobox" title="Portfolio Website"><i class="fas fa-plus"></i></a>
                             <a href="https://pranjay-poddar.github.io/anurag_bajoria/" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -498,7 +498,7 @@ drift.load('izskvvhsx7wr');
                         <h4>Virtual Rube Goldberg Machine</h4>
                         <p> </p>
                         <div class="portfolio-links">
-                            <a href="projects images/rube.png" data-gall="portfolioGallery" class="venobox"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/rube.png" data-gall="portfolioGallery" title="Virtual Rube Goldberg Machine " class="venobox"><i class="fas fa-plus"></i></a>
                             <a href="https://github.com/pranjay-poddar/dsa_asg4" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
@@ -512,7 +512,7 @@ drift.load('izskvvhsx7wr');
                         <h4>IWSC Student Chapter Portal</h4>
                         <p> </p>
                         <div class="portfolio-links">
-                            <a href="projects images/iwsc.png" data-gall="portfolioGallery" class="venobox"><i class="fas fa-plus"></i></a>
+                            <a href="projects images/iwsc.png" data-gall="portfolioGallery" title="IWSC Student Chapter Portal "class="venobox"><i class="fas fa-plus"></i></a>
                             <a href="https://github.com/pranjay-poddar/IWSC-Student-Chapter-Portal" target="_blank"><i class="fas fa-link"></i></a>
                         </div>
                     </div>
